added styling to css file for footer element and reformatted the Contact section, made changes in html doc pertaining to location of contact section

--- a/index.html
+++ b/index.html
@@ -81,33 +81,40 @@
       </section>
 
       <section id="contact">
-        <div class="contact-container">
         <h2>Contact Me</h2>
-        <div>
-          <h5>First Name</h5>
-          <input type="text" placeholder="First Name">
+        <div class="contact-container">
+          <div>
+            <h5>First Name</h5>
+            <input type="text" placeholder="First Name" />
+          </div>
+          <div>
+            <h5>Last Name</h5>
+            <input type="text" placeholder="Last Name" />
+          </div>
+          <div>
+            <h5>Email</h5>
+            <input type="text" placeholder="Email" />
+          </div>
         </div>
-        <div>
-          <h5>Last Name</h5>
-          <input type="text" placeholder="Last Name">
-        </div>
-        <div>
-          <h5>Email</h5>
-          <input type="text" placeholder="Email">
-
-        </div>
-        <div>
+        <div class="contact-des">
           <h5>Description</h5>
           <textarea placeholder="Description"></textarea>
+          <br/>
+          <button>SUBMIT</button>
         </div>
-        <button>SUBMIT</button>
+        
       </section>
     </main>
 
-    <footer>
-      <section>
-        <h2>footer</h2>
-      </section>
+    <footer class="footer">
+      <h4>Peter Shaughnessy 2022</h4>
+      <div>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
