--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./reset.style.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Assets/style.css" />
+    <link rel="stylesheet" href="./Assets/reset.style.css" />
     <title>Peter Shaughnessy Portfolio</title>
   </head>
   <body>
@@ -31,20 +31,8 @@
             alt="profile pic"
           />
           <p class="about-info">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Voluptatum, hic. Saepe voluptas fugit esse, veniam aspernatur,
-            dolore est facere vel, iure quis tenetur quia nam quod? Nostrum, hic
-            ullam harum praesentium accusamus cumque obcaecati inventore eos
-            reprehenderit error, soluta eligendi eaque? Tenetur tempora cum
-            incidunt? Quidem sequi suscipit maiores officiis nihil, a
-            reiciendis. Rerum fugit, assumenda nostrum labore totam cum
-            perspiciatis quod illo vitae, veritatis facere. Inventore odit nulla
-            repellendus veritatis deserunt aliquid eligendi eveniet quidem
-            similique doloribus ipsam suscipit temporibus ipsum a fuga, non
-            sapiente quisquam, illo voluptate excepturi consectetur voluptas
-            vel! Culpa, temporibus repudiandae consectetur nesciunt molestiae
-            vel?
-          </p>
+            This page represents my intial portfolio created during the second week of my bootcamp experience. I expect to make changes to the page moving forward as my knowledge base grows increases. I look forward to sharing those results with you. 
+           </p>
         </div>
       </section>
 
