--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             alt="profile pic"
           />
           <p class="about-info">
+            A work in progress..
             This page represents my intial portfolio created during the second week of my bootcamp experience. I expect to make changes to the page moving forward as my knowledge base grows increases. I look forward to sharing those results with you. 
            </p>
         </div>
