--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Peter Shaughnessy - Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    
+    <link rel="stylesheet" href="style.css">
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
       <header>
-        <div class="header-container">
           <div class="logo">
             <h1>Peter Shaughnessy</h1>
           </div>
@@ -17,11 +16,9 @@
             <ul>
               <li><a href="#about-me">About Me</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact</a></li>
               <li><a href="#resume">Resume</a></li>
             </ul>
           </nav>
-        </div>
       </header>
       
     <main>
@@ -42,21 +39,6 @@
             <a href="project-3.html"><img src="images/portfolio-image-3.jpg" alt="Project 3"></a>
             <h3>Project 3</h3>
             <p>Description of project 3.</p>
-          </div>
-          <div class="project">
-            <a href="project-4.html"><img src="images/portfolio-image-4.jpg" alt="Project 4"></a>
-            <h3>Project 4</h3>
-            <p>Description of project 4.</p>
-          </div>
-          <div class="project">
-            <a href="project-5.html"><img src="images/portfolio-image-5.jpg" alt="Project 5"></a>
-            <h3>Project 5</h3>
-            <p>Description of project 5.</p>
-          </div>
-          <div class="project">
-            <a href="project-6.html"><img src="images/portfolio-image-6.jpg" alt="Project 6"></a>
-            <h3>Project 6</h3>
-            <p>Description of project 6.</p>
           </div>
         </div>
       </section>
